# backend

./: .env  .gitignore  .pylintrc  ARCHITECTURE.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_VIOLATIONS.md  Dockerfile  Makefile  Pipfile  README.md  SEQUENCE_DIAGRAMS.md  TODO.py  alembic.ini  application.py  assessment_response.json  docker-compose.yml  go  go.helpers  initial_queries.sql  interactions.http  logging.yaml  pyproject.toml  pytest.ini  template.env  template.testenv
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py  settings.py  type_hints.py  utils.py
app/authorization/: auth_bearer.py  exceptions.py  token_verifier.py  verify_authorization_header.py
app/core/: README.md  exceptions.py
app/core/interactors/: assessments.py
app/core/models/: answer.py  assessment.py  assessment_result.py  assessment_submission.py  assessment_summary.py  bucket_object.py  choice.py  exceptions.py  exercise.py  exercise_submission.py  media_types.py  minio_location.py  multimedia.py  multimedia_choice.py  multimedia_file.py  multiple_choice.py  multiple_choice_answer.py  primer.py  question.py  question_type.py  role.py  score.py  static_item.py  submission.py  text_choice.py  text_question.py  user.py  video.py  video_choice.py  video_question.py
app/core/test/: test_assessment.py  test_interactors.py  test_multiple_choice.py
app/database/: README.md  exceptions.py  metadata.py  orm.py  table_importer.py  type_hints.py
app/database/orm/: engine.py  session.py
app/database/tables/: assessment_submissions.py  assessments.py  assessments_tasks.py  base.py  bucket_objects.py  buckets.py  choices.py  exercise_submissions.py  exercises.py  multimedia_files.py  multiple_choice_submissions.py  multiple_choice_submissions_choices.py  multiple_choices.py  multiple_choices_choices.py  primers.py  submissions.py  submissions_choices.py  tasks.py  text_submissions.py  texts.py
app/docs/: openapi_description.py  openapi_summary.py
app/external_services/keycloak/: auth_bearer.py  client.py  dependencies.py
app/external_services/minio/: client.py
app/log/: filters.py
app/log/config/: config.json  filters.py  setup_logging.py
app/mappers/: README.md  assessment_mapper.py  assessment_submission_mapper.py  choice_mapper.py  exercise_mapper.py  exercise_submission_mapper.py  multimedia_file_mapper.py  multiple_choice_mapper.py  primer_mapper.py  submission_mapper.py
app/models/: assessment.py  choice.py  multiple_choice.py
app/repositories/: README.md  assessment_submissions.py  assessments.py  choices.py  exercise_submissions.py  exercises.py  multimedia_files.py  multiple_choices.py  primers.py  submissions.py  tasks.py  utils.py
app/rest/: README.md  dependencies.py  main.py  open_api_workaround.py  settings.py
app/rest/filters/: assessment_submissions.py
app/rest/requests/: assessment_submissions.py  assessments.py  choices.py  exercise_submissions.py  exercises.py  multimedia_files.py  multiple_choices.py  primers.py
app/rest/responses/: assessment_results.py  assessment_submissions.py  assessments.py  choices.py  exercise_submissions.py  exercises.py  multimedia_files.py  multiple_choices.py  object_storage.py  primers.py  scores.py  submissions.py  users.py
app/rest/routers/: assessment_submissions.py  assessments.py  (+11 more)
app/routers/: assessments.py  root.py
app/services/: README.md  assessment_repository.py  assessment_result_service.py  assessment_service.py  assessment_submission_service.py  choice_service.py  exceptions.py  exercise_service.py  exercise_submission_service.py  multimedia_file_service.py  multiple_choice_service.py  object_storage_client.py  primer_service.py  scorer_service.py  scoring_service.py  submission_service.py  task_service.py  user_service.py
db_migrations/: env.py  script.py.mako
db_migrations/versions/: 2147c19c1d38_add_score_to_exercise_submissions.py  27d43ce7e30e_add_boolean_finished.py  27d43ce7e30e_add_boolean_finished_to_assessment_.py  376f1b3cd3f1_initial_migration.py  3c16ceb96151_add_initial_secondary_tables.py  4e0706c45957_initial_migration.py  55c8e63c535d_initial_migration.py  6c37a4dce403_add_unique_constraint_for_exercise_submissions.py  95430add6996_initial_migration.py  98f8ab30dd36_initial_migration.py  c7ae71fc77b5_add_modified_at_to_base.py  e7e0f7e8b23f_initial_migration.py  ec64a0fbdf2c_delete_user_id_in_exercise_submissions.py
test/: test_assessment.py  test_root.py
tests/: conftest.py  settings_for_tests.py  test_config.py  test_openapi_configuration.py  test_settings.py  test_utils.py
tests/authorization/: conftest.py  test_auth_bearer.py
tests/core/: conftest.py  test_assessment.py  test_assessment_service.py  test_interactors.py  test_media_type.py  test_multiple_choice.py
tests/database/: conftest.py  data_inserts.py  dependencies.py  test_assessments.py  test_assessments_tasks.py  test_base.py  test_bucket_objects.py  test_choices.py  test_exercises.py  test_multiple_choices.py  test_multiple_choices_choices.py  test_orm_setup.py  test_primers.py  test_submissions.py  test_tasks.py  utils.py
tests/db_migrations/: test_head.py
tests/integration/: conftest.py  helper.py  test_keycloak_admin_integration.py
tests/log/: test_filter.py
tests/repositories/: conftest.py  test_assessments.py  test_choices.py  test_multimedia_files.py  test_multiple_choices.py  test_submissions.py
tests/rest/: conftest.py  test_assessments_route.py  test_dependencies.py  test_endpoints_status_codes.py  test_exercises_route.py  test_main.py  test_object_storage_route.py  test_primers_route.py  test_root_route.py  test_settings.py
tests/services/: conftest.py  test_assessment_result_service.py  test_assessment_service.py  test_assessment_submission_service.py  test_choice_service.py  test_exercise_service.py  test_exercise_submission_service.py  test_multimedia_file_service.py  test_multiple_choice_service.py  test_object_storage_client.py  test_primer_service.py  test_scoring_service.py  test_submission_service.py  test_task_service.py  test_user_service.py
(+75 files in other folders)
