[tool.poetry]
name = "backend"
version = "0.1.0"
description = "SLAS - SLPortal Backend"
authors = ["Danny Rehl", "Dustin Heckmann"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.3"
fastapi = {version = "^0.115", extras = ["all"]}
minio = "^7.2"
psycopg2-binary = "^2.9"
pydantic-settings = "^2.6"
pyjwt = {version = "^2.8", extras = ["crypto"]}
python-multipart = "^0.0, >=0.0.18"
sqlalchemy = "^2.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7"
coverage = "^7.3"
freezegun = "^1.2"
gevent = "^24.11"
isort = "^5.13"
mypy = "^1.5"
pylint = "^3.3"
pytest = "^8.3"
pytest-alembic = "^0.11.1"
pytest-asyncio = "^0.21"
pytz = "^2024.2"
ruff = "^0.8"
testcontainers = "^4.8.1"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.coverage.run]
concurrency = ["thread", "gevent"]

[tool.isort]
line_length = 100
order_by_type = false

[[tool.mypy.overrides]]
module = "fastapi_auth_middleware"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "minio"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "minio.datatypes"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "minio.error"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "decouple"
ignore_missing_imports = true

[tool.pylint.basic]
good-names= """
    id,
    _,
"""

[tool.pylint."MESSAGES CONTROL"]
disable= """
    fixme,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    too-few-public-methods,
    too-many-instance-attributes,
"""

[tool.pylint.format]
max-line-length = 120

[tool.pylint.master]
extension-pkg-whitelist = "pydantic"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-rA",
    "--tb=long",
    "--junitxml=./pytest-results.xml"
]
console_output_style = "count"
junit_family = "xunit2"

[tool.pytest_env]
SLPORTAL_ENV = "testing"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
